<resources>
    <string name="app_name">UniversityWall</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The
        application will now exit.
    </string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>


    <!--    login fragment    -->
    <string name="wrong_login">Wrong login</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">Login</string>
    <string name="login_form_button">Log In</string>
    <string name="login_form_registration">I don\'t have an account</string>
    <string name="connection_error_login">Connection error. Try again later.</string>


    <!--    messages list fragment    -->
    <string name="messages_list_refresh">Refresh</string>
    <string name="menu_show_groups">Show groups</string>
    <string name="menu_refresh_messages">Refresh list</string>
    <string name="messages_refreshing_fail_title">Error</string>
    <string name="messages_refreshing_fail">You cannot refresh list now. Please, check connection and try again later.</string>

    <!--    registration fragment    -->
    <string name="registration_form_login">Login</string>
    <string name="registration_form_name">Display name</string>
    <string name="registration_form_password">Password</string>
    <string name="registration_form_password_repeat">Repeat password</string>
    <string name="registration_form_button">Register</string>
    <string name="register_back_to_login">Back</string>

    <string name="registration_error_ok">OK</string>
    <string name="registration_error_title">Error</string>
    <string name="registration_connection_error">Connection error. Try again later.</string>
    <string name="registration_login_already_exists">Typed login already exists, correct this</string>
    <string name="registration_wrong_password">This account have different password.</string>
    <string name="registration_different_passwords">Typed passwords are different, please correct this.</string>
    <string name="registration_empty_fields">At least one field is empty.</string>
    <string name="registration_password_not_meet_requirements">Password should have at least %1$d characters.</string>
    <string name="registration_display_name_too_short">Typed display name should have at least %1$d characters.</string>
    <string name="registration_too_short_login">Login should have at least %1$d characters.</string>


    <!--    groups fragment    -->
    <string name="groups_list_refresh">Refresh</string>
    <string name="group_add">Add</string>
    <string name="group_leave">Leave</string>
    <string name="message_list_go_to_groups">Groups</string>
    <string name="no">NO</string>
    <string name="group_invitation_confirmation">Do you really want join to group %1$s?</string>
    <string name="group_invitation_confirmation_title">Confirmation</string>

    <string name="group_joining_success_title">Welcome!</string>
    <string name="group_joined_successfully">You joined successfully to group %1$s!</string>
    <string name="group_joining_fail_title">Error</string>
    <string name="group_joined_failed">You cannot join now. Please, check connection and try again later.</string>
    <string name="group_leaving_fail_title">Error</string>
    <string name="group_leaving_fail">You cannot leave group now. Please, check connection and try again later.</string>
    <string name="groups_refreshing_fail_title">Error</string>
    <string name="groups_refreshing_fail">You cannot refresh list now. Please, check connection and try again later.</string>

    <string name="menu_add_group">Add group</string>
    <string name="menu_refresh_groups">Refresh list</string>
    <string name="required_permissions_dialog_title">Required permissions</string>
    <string name="required_permissions_dialog_message">Application needs those permissions to proper running.</string>

</resources>
