<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019. by Sebastian Witasik
  ~ All rights reserved. No part of this application may be reproduced or be part of other software, without the prior written permission of the publisher. For permission requests, write to the author(WitasikSebastian@gmail.com).
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data tools:ignore="MissingConstraints">

        <variable
            name="viewmodel"
            type="io.github.slupik.universitywall.screen.login.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.login.LoginFragment">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:visibility="@{viewmodel.viewState.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="116dp"
                android:layout_height="128dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{viewmodel.viewState.loading != View.VISIBLE}"
            android:text="@string/login_form_button"
            android:onClick="@{()->viewmodel.onLogIn()}"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="@{viewmodel.viewState.loading != View.VISIBLE}"
            android:hint="@string/login_form_login"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewmodel.login}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26999998" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:enabled="@{viewmodel.viewState.loading != View.VISIBLE}"
            android:hint="@string/login_form_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@={viewmodel.password}"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/wrong_login"
            android:visibility="@{viewmodel.viewState.wrongLogin}"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/wrong_password"
            android:visibility="@{viewmodel.viewState.wrongPassword}"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_error_login"
            android:textColor="@android:color/primary_text_light"
            android:visibility="@{viewmodel.viewState.connectionError}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>